2008-02-09  Adam Fedor  <fedor@gnu.org>

	* GormCore/GormGenericEditor.m ([GormGenericEditor -refreshCells]): 
	Avoid segfault on solaris machines.

2008-02-09 12:15-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m
	* GormCore/GormGenericEditor.m
	* GormCore/GormObjectEditor.m: Change background color of 
	object view.

2008-01-10  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile.postamble (LN_S_RECURSIVE): For
	backwards-compatibility with older versions of gnustep-make,
	define to be the same as LN_S if not defined yet.	
	(before-all): Use RM_LN_S to delete the symlink, and use
	LN_S_RECURSIVE to create it.
	(after-clean): Use RM_LN_S to delete the symlink.

	* GormPrefs/GormPrefController.m ([-init]): Avoid compiler
	warning.
	
2008-01-07 20:04-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormMenuItemAttributesInspector.h
	* Palettes/0Menus/GormMenuItemAttributesInspector.m: Moved strings
	for non-printable characters to class variables.

2008-01-07 18:50-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormGenericEditor.m: Removed patch for bug#17539.  Was
	causing issues on load.
	* GormCore/GormNibWrapperLoader.m: Removed extra NSLog(...);

2008-01-07 18:37-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperLoader.m: Minor issues corrected with c99
	changes.

2008-01-07 17:40-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormDrawerAttributesInspector.gorm:
	Fixed issue with dropdown.
	* Palettes/2Controls/GormButtonEditor.m: Fixed minor resize issue.

2008-01-05 Riccardo Mottola <riccardo@kaffe.org>
	* GormCore/GormWrapperBuilder.m: removed some c99-isms
	
2008-01-04 Riccardo Mottola <riccardo@kaffe.org>
	* GormCore/GormGormWrapperLoader.m: removed some c99-isms
	* GormCore/GormNibWrapperLoader.m: removed some c99-isms

2008-01-04 18:38-EST Gregory John Casamento <greg_casamento@yahoo.com>
